# clawmimoto_bot

./: .coderabbit.yml  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GITHUB_AUTOMATION.md  INTEGRATION_SUMMARY.md  Makefile  README.md  SETUP_GUIDE.md  clawforge.service  docker-compose.yml  pyproject.toml  requirements-py313.txt  requirements-web.txt  requirements.txt  test_liquidity_gate.py  watchdog.out  watchdog.sh
.github/: CODEOWNERS  SECRETS_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coderabbit.yml  deploy.yml
clawforge/: __init__.py  ai_scan.py  bot.py  liquidity_gate.py  mock_engine.py  strategy.py  subscription.py  telegram_bot.py  telegram_ui.py
clawforge/integrations/: deepseek.py  meme.py  stepfun.py
config/: config.yaml  sessions.py
configs/: config.json
deploy/: prod.sh
grid_layer/: process_manager.py
grid_layer/grid_layer/: process_manager.py
scripts/: boot_recovery.sh  cooknow.py  export_trades.py  init_github.sh  maintenance_reboot.sh  market_snapshot.py  push_branch.sh  session_executor.py  session_prescan.py  setup_repo.sh  supabase_sync.py  ta_cron.py  watchdog-cron.sh
scripts/session_cache/: pre_london_prescan.json
strategies/: claw5m_hybrid.py  claw5m_sniper.py
tests/: test_strategy.py
unified_ui/: handlers.py
user_data/: channel_message_log.json
